--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>heading javascript</h1>
+    <ul class="people"></ul>
     <!-- <script>
         alert("hello world")
     </script> -->
