--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Function</title>
 </head>
 <body>
-    <h1>heading javascript</h1>
+    <h1>Object Literals</h1>
     <ul class="people"></ul>
     <!-- <script>
         alert("hello world")
