--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Function</title>
-</head>
-<body>
-    <h1>Object Literals</h1>
-    <ul class="people"></ul>
-    <!-- <script>
-        alert("hello world")
-    </script> -->
+  </head>
+  <body>
+    <h1>The DOM</h1>
+    <div>
+      <p>hello world</p>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio adipisci
+        consectetur debitis illo officia illum nisi consequatur explicabo,
+        recusandae nostrum autem velit animi cumque, possimus maiores nulla non
+        vel veritatis.
+      </p>
+      <p class="error">this is an error message</p>
+    </div>
+
+    <div class="error">this is another error</div>
     <script src="node.js"></script>
-</body>
+  </body>
 </html>
