--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Function</title>
   </head>
   <body>
-    <h1>The DOM</h1>
+    <h1 id="page-title">The DOM</h1>
     <div>
       <p>hello world</p>
       <p>
