--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       <p class="error">this is an error message</p>
     </div>
 
-    <div class="error">this is another error</div>
+    <div class="error">this is another error</div><br>
+
+    <div class="content">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, veritatis.
+    </div>
     <script src="node.js"></script>
   </body>
 </html>
