DOM style attribute

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
       <p class="error">this is an error message</p>
     </div>
 
-    <div class="error">this is another error</div><br>
+    <a
+      href="https://latra.udemy.com/course/modern-javascript-from-novice-to-ninja/learn/lecture/14281300#overview"
+    > this is an attribute</a>
+
+    <div class="error">this is another error</div>
+    <br />
 
     <div class="content">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, veritatis.
