DOM to add class using js

--- a/index.html
+++ b/index.html
@@ -3,31 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Function</title>
   </head>
   <body>
-    <h1 id="page-title">The DOM</h1>
-    <div>
-      <p>hello world</p>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio adipisci
-        consectetur debitis illo officia illum nisi consequatur explicabo,
-        recusandae nostrum autem velit animi cumque, possimus maiores nulla non
-        vel veritatis.
-      </p>
-      <p class="error">this is an error message</p>
-    </div>
-
-    <a
-      href="https://latra.udemy.com/course/modern-javascript-from-novice-to-ninja/learn/lecture/14281300#overview"
-    > this is an attribute</a>
-
-    <div class="error">this is another error</div>
-    <br />
-
-    <div class="content">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, veritatis.
-    </div>
+    <h1>The DOM</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus illo
+      voluptatem maxime quos vero ea deleniti molestiae dolorum facere cum?
+    </p>
     <script src="node.js"></script>
   </body>
 </html>
