--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Function</title>
   </head>
   <body>
     <h1>The DOM</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus illo
-      voluptatem maxime quos vero ea deleniti molestiae dolorum facere cum?
-    </p>
+    <p>Lorem ipsum error</p>
+    <p>Lorem ipsum success</p>
+    <p>Lorem ipsum dolor</p>
+    <p>Lorem ipsum success</p>
+    <p>Lorem ipsum error</p>
+    <p>Lorem ipsum dolor</p>
+    <p>Lorem ipsum error</p>
+    <p>Lorem ipsum success</p>
     <script src="node.js"></script>
   </body>
 </html>
