DOM convert html collection to node list

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   </head>
   <body>
     <h1>The DOM</h1>
-    <p>Lorem ipsum error</p>
-    <p>Lorem ipsum success</p>
-    <p>Lorem ipsum dolor</p>
-    <p>Lorem ipsum success</p>
-    <p>Lorem ipsum error</p>
-    <p>Lorem ipsum dolor</p>
-    <p>Lorem ipsum error</p>
-    <p>Lorem ipsum success</p>
+    <article>
+      <h2>article title</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
+      <article>written by okedo</article>
+    </article>
     <script src="node.js"></script>
   </body>
 </html>
