--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <h1>The DOM</h1>
-    <article>
-      <h2>article title</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
-      <article>written by okedo</article>
-    </article>
+    <ul>
+      <li>Lorem, ipsum.</li>
+      <li>Lorem, ipsum.</li>
+      <li>Lorem, ipsum.</li>
+      <li>Lorem, ipsum.</li>
+    </ul>
+    <button>click me</button>
     <script src="node.js"></script>
   </body>
 </html>
