DOM click events with event listener

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <h1>The DOM</h1>
     <ul>
-      <li>Lorem, ipsum.</li>
-      <li>Lorem, ipsum.</li>
-      <li>Lorem, ipsum.</li>
-      <li>Lorem, ipsum.</li>
+      <li>item1</li>
+      <li>item2</li>
+      <li>item3</li>
+      <li>item4</li>
     </ul>
     <button>click me</button>
     <script src="node.js"></script>
