--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li>item3</li>
       <li>item4</li>
     </ul>
+    <p>choose your own item</p>
     <button>click me</button>
     <script src="node.js"></script>
   </body>
